--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
    <header>
    <div class="logo">
-       <img src="images/logo5.jpg" width="250px" height="158px" ></img>
+       <img src="logo5.jpg" width="250px" height="158px" ></img>
        </div>
    <nav>
       <ul class="main">
@@ -23,7 +23,7 @@
    </header>
   
    <div class="image">
-   <img src="images/business.jpg "  style="width:590;height:480px;margin-left:90px" ></img>
+   <img src="business.jpg "  style="width:590;height:480px;margin-left:90px" ></img>
    </div>
    <div class="text">
    <pre><h2>
@@ -79,10 +79,10 @@
    <table><tr><td><h1>WHY CHOOSE USE</td></tr></table></br></br>
    <table>
    <tr>
-   <td><img src="images/logo8.jpg" height="160" width="330"></td>&nbsp;&nbsp;&nbsp;
-   <td><img src="images/services.jpg" height="160" width="330"></td>&nbsp;&nbsp;
-   <td><img src="images/references.jpg" height="160" width="330"></td>&nbsp;&nbsp;
-   <td><img src="images/newpaper.jpg" height="160" width="350"></td>&nbsp;&nbsp;&nbsp;
+   <td><img src="logo8.jpg" height="160" width="330"></td>&nbsp;&nbsp;&nbsp;
+   <td><img src="services.jpg" height="160" width="330"></td>&nbsp;&nbsp;
+   <td><img src="references.jpg" height="160" width="330"></td>&nbsp;&nbsp;
+   <td><img src="newpaper.jpg" height="160" width="350"></td>&nbsp;&nbsp;&nbsp;
    </tr>
    <tr> <td><h3><pre>OURTEAM</pre></h3></td>
    <td><h3><pre>OURSERVICES</pre></h3></td>
